# MNNG

./: README.md
test/: CMakeCache.txt  CMakeLists.txt  client.c  server.c  test.h
